# heart-disease-prediction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
conf/: config.yaml
frontend/src/: App.jsx
models/: model.joblib.dvc
notebooks/: 01_eda.ipynb
src/heart_failure_prediction/: export_model.py  train.py
src/heart_failure_prediction/serving/: schemas.py
tests/: test_api.py
