[project]
name = "heart-failure-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "jarzeckil",email = "jarzeckil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "heart_failure_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
